@@ -1,4 +1,22 @@
 
+Изменения в nginx 1.0.15                                          12.04.2012
+
+    *) Безопасность: при обработке специально созданного mp4 файла модулем
+       ngx_http_mp4_module могли перезаписываться области памяти рабочего
+       процесса, что могло приводить к выполнению произвольного кода
+       (CVE-2012-2089).
+       Спасибо Matthew Daley.
+
+    *) Исправление: в модуле ngx_http_mp4_module.
+
+
+Изменения в nginx 1.0.14                                          15.03.2012
+
+    *) Безопасность: содержимое ранее освобождённой памяти могло быть
+       отправлено клиенту, если бэкенд возвращал специально созданный ответ.
+       Спасибо Matthew Daley.
+
+
 Изменения в nginx 1.0.13                                          05.03.2012
 
     *) Добавление: директивы return и error_page теперь могут использоваться
