@@ -50,7 +50,7 @@ our @EXPORT = qw(
     HTTP_INSUFFICIENT_STORAGE
 );
 
-our $VERSION = '1.0.14';
+our $VERSION = '1.0.15';
 
 require XSLoader;
 XSLoader::load('nginx', $VERSION);
